--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.hero {
+#hero {
   background-image: url('../img/giraffes.jpg');
   background-size: cover;
   background-position: center center;
@@ -11,5 +11,13 @@
 body {
   background: #eee;
   margin: 0px;
-  
+}
+#hero-imageoverlay {
+  position: absolute;
+  background-color: rgba(0,0,0,0.5);
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -5;
 }
