--- a/css/style.css
+++ b/css/style.css
@@ -7,34 +7,36 @@
   bottom: 0;
   height: 100vh;
   z-index: -10;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
-body {
-  background: #eee;
-  margin: 0px;
-}
+
 #hero-imageoverlay {
   position: absolute;
   background-color: rgba(0,0,0,0.5);
   top: 0;
   bottom: 0;
-  height: 100%;
+  height: 200%;
   width: 100%;
   z-index: -5;
+  margin: 0;
+  border: 0;
+  padding: 0;
+
 }
 .name {
   color: white;
   font-family: 'Lobster', cursive;
-
   font-size: 70;
   float: center;
-}
-.wrapper {
-  width: auto;
-  margin: 0 auto 0 auto;
-}
-.name {
   height: 100px;
   background:#eee;
   padding: 20px;
   text-align: center;
+}
+.navigation {
+  height: 50px;
+}
+
 }
