--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #hero {
-  background-image: url('../img/giraffes.jpg');
+  background-image: url('../img/almost.jpg');
   background-size: cover;
   background-position: center center;
   position: relative;
@@ -8,8 +8,6 @@
   height: 100vh;
   z-index: -10;
   margin: 0;
-  border: 0;
-  padding: 0;
 }
 
 #hero-imageoverlay {
@@ -17,26 +15,20 @@
   background-color: rgba(0,0,0,0.5);
   top: 0;
   bottom: 0;
-  height: 200%;
+  height: 100%;
   width: 100%;
   z-index: -5;
   margin: 0;
-  border: 0;
-  padding: 0;
-
 }
-.name {
-  color: white;
-  font-family: 'Lobster', cursive;
-  font-size: 70;
-  float: center;
+body {
+  margin: 0;
+}
+.wrapper {
+  height: auto;
+}
+.heading {
   height: 100px;
-  background:#eee;
   padding: 20px;
   text-align: center;
-}
-.navigation {
-  height: 50px;
-}
-
+  font-family: 'Montserrat', sans-serif;
 }
