Just learnt how to add a button, so I just did

--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,10 @@ nav>ul> {
   position: absolute;
   right: 0;
 }
+.btn {
+  width: 130px;
+  height: 40px;
+  font-size: 16px;
+  background: #34f315;
+  
+}
