added image to index.html

--- a/css/style1.css
+++ b/css/style1.css
@@ -8,7 +8,7 @@ body {
   position: relative;
   top: 0;
   bottom: 0;
-  height: 100vh;
+  height: 200vh;
   z-index: -10;
   margin: 0;
 }
@@ -52,4 +52,21 @@ body {
 .footer {
   clear: both;
   height: 40px;
+}
+img {
+  image-resolution: snap;
+  image-orientation: 100px;
+  height: 200px;
+  border: none;
+  border-radius: 50px;
+}
+nav>ul>li {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Jura', sans-serif;
+  padding: 0 20px 0 20px;
+  float: left;
+  list-style: none;
 }
