Added more info on why I joined Moringa

--- a/css/style1.css
+++ b/css/style1.css
@@ -48,6 +48,9 @@ body {
   width: 200px;
   float: right;
   min-height: 400px;
+  color: white;
+  font-family: 'Jura', sans-serif;
+  font-size: 50;
 }
 .footer {
   clear: both;
@@ -69,4 +72,5 @@ nav>ul>li {
   padding: 0 20px 0 20px;
   float: left;
   list-style: none;
+  font-size: 60;
 }
